--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,4 +1,4 @@
-<div class="fixed-top">
+<div class="top">
   <nav class="navbar navbar-light bg-faded">
     <div class="container">
       <a href="#" class="navbar-brand">
@@ -7,7 +7,6 @@
       <a a href="#"><img src="/assets/carrinho.png" /></a>
     </div>
   </nav>
-
   <div class="menu">
     <div class="container">
       <ul class="nav">
@@ -19,9 +18,8 @@
         </li>
       </ul>
     </div>
+    <div class="banner">
+      <img src="/assets/banners/img_1.jpg" />
+    </div>
   </div>
-</div>
-
-<div class="banner">
-  <img src="/assets/banners/img_1.jpg" />
 </div>
