--- a/src/app/oferta/oferta.component.html
+++ b/src/app/oferta/oferta.component.html
@@ -1,22 +1,20 @@
 <div class="container">
-  <div class="oferta">
+  <div class="oferta" *ngIf="oferta !== undefined">
 
     <div class="row">
       <div class="col">
-        <h4>Super Burger - Rodízio de Mini-hambúrger com opção de entrada.</h4>
+        <h4>{{ oferta.descricao_oferta }}</h4>
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-6">
         <div class="img_capa">
-          <img src="/assets/ofertas/1/img1.jpg" />
+          <img [src]="oferta.imagens[0].url" />
         </div>
 
         <div class="thumbnails">
-          <img src="/assets/ofertas/1/img2.jpg" />
-          <img src="/assets/ofertas/1/img3.jpg" />
-          <img src="/assets/ofertas/1/img4.jpg" />
+          <img *ngFor="let imagem of oferta.imagens" [src]="imagem.url" />
         </div>
       </div>
 
@@ -25,12 +23,12 @@
           <div class="col text-center">
             <p>Por apenas</p>
           </div>
-          
+
         </div>
 
         <div class="row">
           <div class="col text-center">
-            <h1>R$ 29,90</h1>
+            <h1>R$ {{ oferta.valor.toFixed(2) }}</h1>
           </div>
         </div>
 
@@ -39,10 +37,25 @@
             <button type="button" class="btn btn-warning btn-lg">Adicionar ao carrinho</button>
           </div>
         </div>
-          
+
       </div>
 
     </div>
 
+  </div>
+  <div class="row" style="margin-top: 25px; margin-bottom: 150px">
+    <div class="col">
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" data-toggle="tab" routerLink="como-usar" href="#como-usar" role="tab" aria-selected="true">Como Usar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" routerLink="onde-fica" role="tab" aria-selected="false">Onde fica</a>
+        </li>
+      </ul>
+      <div class="tab-content">
+        <router-outlet class="tab-pane fade"></router-outlet>
+      </div>
+    </div>
   </div>
 </div>
